# DocWiz

./: .firebaserc  .gitattributes  .gitignore  ARCHITECTURE.md  CLEAR_AUTH_INSTRUCTIONS.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  FINAL_TEST_STATUS.md  FIREBASE_SETUP.md  GEMINI_2.5_FLASH_IMAGE_SETUP_COMPLETE.md  GOOGLE_SERVICES_INTEGRATION.md  INTEGRATION_TESTING_SUMMARY.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_VERIFICATION.md  START_APP.md  USER_GUIDE.md  docker-compose.yml  firebase.json
backend/: .dockerignore  .env.example  .flake8  API_DOCUMENTATION.md  CELERY_IMPLEMENTATION_SUMMARY.md  CELERY_SETUP.md  Dockerfile  GEMINI_2.5_FLASH_IMAGE_INTEGRATION.md  README.md  celery_worker.py  check_visualization.py  debug_gemini_response.py  init_qdrant.py  migrate_user_passwords.py  pyproject.toml  test_api_visualization.py  test_direct_nano_banana.py  test_gemini_image_gen.py  test_image_gen.py  test_prompt_and_image.py  test_visualization_flow.py
backend/.hypothesis/constants/: 026a97a956b794f6  0a501f2ed6d412c7  0aabee9289137396  0aeb7730297afed8  0ce7aee2ea077801  0ee7d5e453d2c5f6  0f0935be9e08a772  12545b762f757dc4  13db7a8f74c37fe2  19eca17bfff3137b  1d5edf6b5edddddf  20198fa76e9cc99d  205b19361b8c9644  2304f2a5ede1a126  2379c7dbc2915720  2568a91f8f1d3788  26e3e35116e6a400  291304b36b320815  3ab4df736707bf4b  3fcae387256f65ac  449dab3e0b9f9f8d  51b93079d27080a6  551d0e496ef0327b  5640a29112087a57  5766f4f6f92d9d14  57e74fa135a92650  5818b2079d08eb03  591fc72f01bda902  5b3fca2b353b9fe0  6289bdeb43d33dcb  6815288bdb1024ac  6a2131050b0c685b  6b79b23a664c8237  6d27b7712d407765  6e034cfecaaf2608  72f63d8c920df30d  738bdab77ecfb3bc  73a29c80a7824c9b  743a5f6ebd8e19dc  76fc23738be46cc5  (+53 more)
backend/alembic/: env.py
backend/alembic/versions/: 151c4b01e3ed_initial_migration_with_all_tables.py
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/db/: README.md  base.py  firestore_models.py  models.py  seed_pricing.py  (+1 more)
backend/tests/: __init__.py  conftest.py  test_celery_setup.py  test_comparison_endpoints.py  test_e2e_workflows.py  test_insurance_endpoints.py  test_performance.py  test_procedure_endpoints.py  test_property_ai_orchestration.py  test_property_authentication.py  test_property_claim_documentation_completeness.py  test_property_claim_information_completeness.py  test_property_comparison_data_completeness.py  test_property_comparison_persistence.py  test_property_comparison_source_consistency.py  test_property_cost_breakdown_completeness.py  test_property_cost_estimate_transparency.py  test_property_dual_format_claim_output.py  test_property_dual_format_cost_output.py  test_property_embedding_generation.py  test_property_encryption.py  test_property_export_metadata.py  test_property_export_report_completeness.py  test_property_freepik_integration.py  test_property_geographic_cost_variation.py  test_property_image_validation.py  test_property_incomplete_profile_detection.py  test_property_insurance_calculation_completeness.py  test_property_insurance_validation.py  test_property_medical_disclaimer.py  test_property_multi_filter.py  test_property_multi_format_export.py  test_property_payment_plan_inclusion.py  test_property_procedure_display.py  test_property_profile_field_completeness.py  test_property_qdrant_operations.py  test_property_search_result_completeness.py  test_property_shareable_export.py  test_property_similar_case_filtering.py  test_property_similarity_information_display.py  (+2 more)
(+211 files in other folders)
